# numguard

./: .env.example  .gitignore  DEPLOY_SELFHOST.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  render.yaml  server.json  smithery.yaml
docs/: AGENT_TRUST.md  INTEGRATE.md  PROOF_GALLERY.md  proof_gallery.json  verify-a-backtest.md
examples/: agent_reflex.py  catch_a_fake_backtest.py  hold_the_promise.py  langchain_numguard_tool.py  langgraph_guardrail.py  operator_post.py  proof_gallery.py  receive_and_verify.py
facilitator/: Dockerfile  config.json
numguard/: __init__.py  _evalstats.py  _limits.py  anchor.py  asgi.py  backtest.py  backtest_battery.py  claims.py  commitments.py  credits.py  detect.py  eas.py  emit.py  forward.py  guard.py  identity.py  judge.py  mcp_server.py  onchain_log.py  receipt.py  receipt_spec.py  rest_api.py  settle.py  transparency.py  x402.py
scripts/: handshake_test.py
tests/: test_numguard.py  test_transparency.py
